# Espmon

./: .gitignore  Espmon.exe_20260705_060348.speedscope.json  Espmon.slnx  Key.snk  README.md  build-esp32.ps1  build-lib.ps1  espmon.screens.json  package.ps1  publish-payload.ps1
BuildTools/: EspLinkStubGen.deps.json
EspLinkLib/: EspDevice.cs  EspLink.Command.cs  EspLink.Connect.cs  EspLink.Device.cs  EspLink.Flash.cs  EspLink.Frame.cs  EspLink.Lifetime.cs  EspLink.Memory.cs  EspLink.Partititions.cs  EspLink.Registers.cs  EspLink.Reset.cs  EspLink.SerialPort.cs  EspLink.SpiFlash.cs  EspLink.Stub.cs  EspLink.cs  EspLinkLib.csproj
EspLinkStubGen/: EspLinkStubGen.csproj  Program.cs
Espmon.Elevation/: Espmon.Elevation.csproj  Program.cs  WindowsServiceManager.cs  app.manifest
Espmon.Elevation.Interface/: Espmon.Elevation.Interface.csproj  InterfaceBuffers.cs  interface.h
Espmon.Json/: Espmon.Json.csproj  JsonElement.cs  JsonException.cs  JsonParser.cs  JsonRunners.cs  JsonUtility.cs  JsonWriter.cs
Espmon.PortDispatcher/: Device.Designer.cs  Device.cs  DevicePortEntry.cs  EspSerialSession.cs  Espmon.PortDispatcher.csproj  FirmwareBuildTimestamp.cs  FirmwareEntry.cs  Frame.cs  InterfaceBuffers.cs  PortDispatcher.Designer.cs  PortDispatcher.cs  Screen.Designer.cs  Screen.cs  ScreenEntry.Designer.cs  ScreenEntry.cs  ScreenParseException.cs  Session.cs  (+6 more)
espmon-esp32/boards/m5stack-core2/main/: CMakeLists.txt  board_config.h  idf_component.yml
libespmon/: CMakeLists.txt  build_all.ps1  libespmon.code-workspace
libespmon/include/: abi.hpp
libespmon/src/: abi.cpp
(+132 files in other folders)
